--- a/bootstrap.html
+++ b/bootstrap.html
@@ -26,7 +26,7 @@
                             <a class="nav-link active" href="/recepti">Recepti</a>
                         </li>
                         <li class="nav-item" style="margin: 2px 10px 2px 10px;">
-                            <a class="nav-link active" href="/vseckano">Najbolj všečkano </a>
+                            <a class="nav-link active" href="/vseckano">Všečkane slike </a>
                         </li>
                         <li class="nav-item" style="margin: 2px 10px 2px 10px;">
                             <a class="nav-link active" href="/dodaj">Dodaj recept</a>
