popravljene manjše stvari

--- a/bootstrap.html
+++ b/bootstrap.html
@@ -23,10 +23,7 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                   <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                       <li class="nav-item" style="margin: 2px 10px 2px 10px;">
-                          <a class="nav-link" href="/"> Domov</a>
-                      </li>
-                      <li class="nav-item" style="margin: 2px 10px 2px 10px;">
-                          <a class="nav-link" href="/recepti">Recepti</a>
+                          <a class="nav-link" href="/"> Recepti </a>
                       </li>
                       <li class="nav-item" style="margin: 2px 10px 2px 10px;">
                           <a class="nav-link" href="/vseckano">Všečkane slike </a>
