--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 %rebase("bootstrap.html")
 
 
+%for i in range(5):
+<img src="/static/i.png" />
+%end
 
 % a = 13 * 7
 baje je to enako 13*7 = {{a}}
