dodana json datoteka

--- a/dodaj.html
+++ b/dodaj.html
@@ -3,7 +3,7 @@
 <h3> Tukaj lahko dodate svoj recept in ga delite z drugimi obiskovalci te spletne strani </h3>
 <p>
     Lahko uporabite svoje podatke ali pa kakšen pvsedonim. Če želite, lahko svoj izdelek tudi slikate
-    in to delite z osstalimi.
+    in to delite z ostalimi.
 </p>
 
 <form method="POST" action="/dodaj_recept" enctype=multipart/form-data>
@@ -23,7 +23,7 @@
     </div>
   
     <div class="input-group">
-        <input type=file name=slike accept=".jpg, .png" class="form-control" id="inputGroupFile02">
+        <input type=file name="Slika" accept=".jpg, .png" class="form-control" id="inputGroupFile02">
     </div>
     <br>
     <button class="btn btn-primary" type="submit" value="Upload">Naloži</button>
