Uporabnik lahko doda slike na spletno stran

--- a/dodaj.html
+++ b/dodaj.html
@@ -23,7 +23,7 @@
     </div>
   
     <div class="input-group">
-        <input type=file name="Slika" accept=".jpg, .png" class="form-control" id="inputGroupFile02">
+        <input type=file name="Slika" accept=".jpg, .png, .jpeg" class="form-control" id="inputGroupFile02">
     </div>
     <br>
     <button class="btn btn-primary" type="submit" value="Upload">Naloži</button>
