--- a/error.html
+++ b/error.html
@@ -1,3 +1,8 @@
 %rebase("bootstrap.html")
 
-<h1>Izbrano ni bilo nic za iskani</h1>
+<h1>Izbrana datoteka ni prave vrste. Prosimo izberite samo slike formata:</h1>
+<ul>
+    <li>.png</li>
+    <li>.jpg</li>
+    <li>.jpeg</li>
+</ul>
