--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 %rebase("bootstrap.html")
 
+<br>
+%for i in seznam_slik:
+<img src="/static/{{i}}">
 
-
-
+%end
+<br>
+<br>
 % a = 13 * 7
 baje je to enako 13*7 = {{a}}
 % for i in range(5):
