--- a/dodaj.html
+++ b/dodaj.html
@@ -13,14 +13,19 @@
       </div>
       <div class="col col-lg-2">
         <input type="text" class="form-control" placeholder="Priimek" name="Priimek">
-      </div>  
-    <br>   
-    <div class="row">
-      <div class="col">
-        <label for="text"> <b>Sem napišite svoj recept</b></label>
-        <textarea id="text" class="form-control" name="Recept" rows="7" cols="48"></textarea>
       </div>
-    </div>
+    <br>  
+    <label for="text"> <b>Kako se imenuje vaša hrana?</b></label>
+      <div class="col col-lg-2">
+        <input type="text" class="form-control" placeholder="Naslov recepta" name="Naslov">
+      </div> 
+    <br>   
+      <div class="row">
+        <div class="col">
+          <label for="text"> <b>Sem napišite svoj recept</b></label>
+          <textarea id="text" class="form-control" name="Recept" rows="7" cols="48"></textarea>
+        </div>
+      </div>
   
     <div class="input-group">
         <input type=file name="Slika" accept=".jpg, .png, .jpeg" class="form-control" id="inputGroupFile02">
