--- a/index.html
+++ b/index.html
@@ -1,21 +1,50 @@
 %rebase("bootstrap.html")
 
-<h3>
-   Tilje
-</h3>
-<p>
-    avtor: {{ime}} {{priimek}}
-</p>
-<br>
-%for i in seznam_slik:
-<img src="/static/{{i}}" class="rounded float-end" style="width: 75%; height: auto;">
+
+
+%for oseba in podatki:
+%if slika:
+<div class="container section">
+    <div class="row">
+        <div class="col-md-6">
+            <h3 class="text-center">
+                {{oseba[2]}}
+            </h3>
+            <br>
+            <p class="text-start">
+                {{oseba[3]}}
+            </p>
+        </div>
+        <div class="col-md-6">
+            <img src="/static/{{oseba[4]}}" style="width: 75%; height: auto;"/>
+        </div>
+    </div>
+    
+</div>
+%else:
+<div class="container section">
+    <div class="row">
+        <div class="col-md-6">
+            <h3 class="text-center">
+                {{oseba[2]}}
+            </h3>
+            <br>
+            <p class="text-start">
+                {{oseba[3]}}
+            </p>
+        </div>
+        <div class="col-md-6">
+            <p>{{oseba[4]}}</p>
+        </div>
+    </div>
+</div>
 %end
+
+
 <br>
 <br>
 
-% for i in range(5):
-<li>{{i ** 2}} </li>
-%end
+
 <form action="/sestej/" method="POST"> 
     a: <input type="text" name="a" placeholder="10">
     b: <input type="text", name="b" value="15">
