dodan profil uporabnika

--- a/bootstrap.html
+++ b/bootstrap.html
@@ -35,8 +35,8 @@
                           <a class="nav-link" href="/dodaj">Dodaj svoj recept</a>
                       </li>
                       <li class="nav-item dropdown" style="margin: 2px 10px 2px 10px;">
-                          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                          Dropdown</a>
+                          <a class="nav-link dropdown-toggle" href="/prijava" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                          Prijavite se</a>
                           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                               <li><a class="dropdown-item" href="#">Action</a></li>
                               <li><a class="dropdown-item" href="#">Another action</a></li>
