--- a/vseckano.html
+++ b/vseckano.html
@@ -1,3 +1,5 @@
 %rebase("bootstrap.html")
 
-<h1> Tukaj bomo naredili da uporabnik vidi vsečkane slike </h1>
+<h1> 
+    Če želite videti recepte, ki ste jih všečkali se <a href="/prijava" >prijavite.</a>
+</h1>
