--- a/bootstrap.html
+++ b/bootstrap.html
@@ -7,17 +7,11 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-
+    
     <title>Masteršef</title>
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   </head>
   
   <body>
-    
-
-
     <div class="container">
       <h1 style="text-align: center;">Masteršef</h1>
       <br>
@@ -35,13 +29,14 @@
                           <a class="nav-link" href="/dodaj">Dodaj svoj recept</a>
                       </li>
                       <li class="nav-item dropdown" style="margin: 2px 10px 2px 10px;">
-                          <a class="nav-link dropdown-toggle" href="/prijava" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                          Prijavite se</a>
+                          <a class="nav-link dropdown-toggle" href="/prijava" id="navbarDropdown" role="button" data-bs-toggle="dropdown">
+                          Prijavite se
+                          </a>
                           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                              <li><a class="dropdown-item" href="#">Action</a></li>
-                              <li><a class="dropdown-item" href="#">Another action</a></li>
-                              <li><hr class="dropdown-divider"></li>
-                              <li><a class="dropdown-item" href="#">Something else here</a></li>
+                            <li><a class="dropdown-item" href="#">Action</a></li>
+                            <li><a class="dropdown-item" href="#">Another action</a></li>
+                            <li><hr class="dropdown-divider"></li>
+                            <li><a class="dropdown-item" href="#">Something else here</a></li>
                           </ul>
                       </li>
                   </ul>
