--- a/dodaj.html
+++ b/dodaj.html
@@ -27,7 +27,7 @@
         <div class="col">      
           <br>
           <li> <b>Sestavine</b></li>
-          <textarea id="text" class="form-control" name="Sestavine" rows="5" cols="48" placeholder="Vsako sestavino in njeno količino napišite v svojo vrstico in pred njo postavite -. &#10 Primer: &#10 -1kg krompirja &#10 -500g piščanca"></textarea>
+          <textarea id="text" class="form-control" name="Sestavine" rows="5" cols="48" placeholder="Vsako sestavino in njeno količino napišite v svojo vrstico in pred njo postavite -, kot kaže primer. &#10 Primer: &#10 -1kg krompirja &#10 -500g piščanca"></textarea>
           <br>
           <li><b>Postopek</b></li>
           <textarea id="text" class="form-control" name="Postopek" rows="7" cols="48"></textarea>
