--- a/prijava.html
+++ b/prijava.html
@@ -6,10 +6,10 @@
             <div class="col-3 mx-auto">
                 <div class="text-center">
                     <h3>Prijavite se</h3>
-                    <div class="col ">
-                        <input type="text" class="form-control" placeholder="Uporabniško ime" name="Uporabniško_ime">
+                    <div class="col">
+                        <input type="text" class="form-control" placeholder="Uporabniško ime" name="Uporabnisko_ime">
                     </div>
-                    <div class="col ">
+                    <div class="col">
                         <input type="text" class="form-control" placeholder="Geslo" name="Geslo">
                     </div>
                     <br>
@@ -26,11 +26,13 @@
         <div class="row">
             <div class="col mx-auto">
                 <div class="text-center">
+                    <br>
+                    <br>
                     <h3>Če nimate svojega profila ga ustvarite tukaj</h3>
+                    <br>
                     <button class="btn btn-primary" enctype="multipart/form-data">Ustvarite nov profil</button>
                 </div>
             </div>
         </div>  
-    </div> 
-           
+    </div>    
  </form>
