--- a/bootstrap.html
+++ b/bootstrap.html
@@ -27,18 +27,22 @@
                       </li>
                       <li class="nav-item" style="margin: 2px 10px 2px 10px;">
                           <a class="nav-link" href="/dodaj">Dodaj svoj recept</a>
-                      </li>
+                      </li>                
+                      %if uporabnik != "Gost":
                       <li class="nav-item dropdown" style="margin: 2px 10px 2px 10px;">
-                          <a class="nav-link dropdown-toggle" href="/prijava" id="navbarDropdown" role="button" data-bs-toggle="dropdown">
-                          Prijavite se
-                          </a>
-                          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
-                          </ul>
+                        <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown">
+                          Prijavljeni ste kot <b>{{uporabnik}} </b>
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                          <li><a class="dropdown-item" href="/odjava">Odjava</a></li>
+                          <li><a class="dropdown-item" href="#">Another action</a></li>                          
+                        </ul>
+                      </li>                     
+                      %else:
+                      <li class="nav-item" style="margin: 2px 10px 2px 10px;">
+                        <a class="nav-link" href="/prijava">Prijavite se</a>
                       </li>
+                      %end
                   </ul>
                   <form class="d-flex" method="GET" action="error.html">
                     <input class="form-control me-2" type="search" placeholder="Najdi">
@@ -53,6 +57,6 @@
 
     <br>
     <br>
-    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
   </body>
 </html>
