--- a/bootstrap.html
+++ b/bootstrap.html
@@ -20,10 +20,10 @@
               <div class="collapse navbar-collapse" >
                   <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                       <li class="nav-item" style="margin: 2px 10px 2px 10px;">
-                          <a class="nav-link" href="/"> Recepti </a>
+                          <a class="nav-link" href="/">Recepti</a>
                       </li>
                       <li class="nav-item" style="margin: 2px 10px 2px 10px;">
-                          <a class="nav-link" href="/vseckano">Všečkane slike </a>
+                          <a class="nav-link" href="/vseckano">Všečkani recepti</a>
                       </li>
                       <li class="nav-item" style="margin: 2px 10px 2px 10px;">
                           <a class="nav-link" href="/dodaj">Dodaj svoj recept</a>
