--- a/vseckano.html
+++ b/vseckano.html
@@ -1,6 +1,6 @@
 %rebase("bootstrap.html")
 
-%if uporabnik != "Gost":
+%if len(vseckane_slike) != 0:
     %for recept in vseckani_recepti:
     <div class="container section">
         <div class="row" style="margin-top: 7%; margin-bottom: 7%;">
@@ -25,12 +25,22 @@
             </div> 
         </div>
     </div>
-    %end     
+    %end    
 %else:
-    <h1> 
-        Če želite videti recepte, ki ste jih všečkali se <a href="/prijava" >prijavite.</a>
-    </h1>
+<div class="container">
+    <div class="row">
+        <div class="col mx-auto">
+            <div class="text-center">
+                <br>
+                <h1>Všečkali niste še nobenih receptov.</h1>
+                <br>
+            </div>
+        </div>
+    </div>  
+</div>  
 %end
+
+
 
 
 
