--- a/bootstrap.html
+++ b/bootstrap.html
@@ -33,9 +33,9 @@
                         <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown">
                           Prijavljeni ste kot <b>{{uporabnik}} </b>
                         </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                          <li><a class="dropdown-item" href="/odjava">Odjava</a></li>
-                          <li><a class="dropdown-item" href="#">Another action</a></li>                          
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">                          
+                          <li><a class="dropdown-item" href="/spremenite_geslo">Spremenite geslo</a></li>  
+                          <li><a class="dropdown-item" href="/odjava">Odjava</a></li>                        
                         </ul>
                       </li>                     
                       %else:
